next-js/src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* 
# 9d05fc
# fc9d05
# 05fc9d
 */

.sidebar-height {
  height: calc(100vh - 64px);
}

.neon-text {
  color: #fff;
  text-shadow: 0 0 7px #bc13fe, 0 0 10px #bc13fe, 0 0 21px #bc13fe,
    0 0 42px #bc13fe, 0 0 82px #bc13fe, 0 0 92px #bc13fe, 0 0 102px #bc13fe,
    0 0 151px #bc13fe;
  animation: text-pulsate 1.5s infinite alternate;
  padding: 0.4em;
}

.neon-button {
  color: #fff;
  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #bc13fe,
    0 0 82px #bc13fe, 0 0 92px #bc13fe, 0 0 102px #bc13fe, 0 0 151px #bc13fe;
  animation: text-pulsate box-pulsate 1.5s infinite alternate;
  border: 0.2rem solid #fff;
  border-radius: 2rem;
  padding: 0.4em;
  box-shadow: 0 0 0.8rem #bc13fe, 0 0 1rem #bc13fe, 0 0 1.2rem #bc13fe,
    inset 0 0 0.8rem #bc13fe, inset 0 0 1rem #bc13fe, inset 0 0 1.2rem #bc13fe;
}

body {
  font-family: "Sacramento", sans-serif;
}

@keyframes text-pulsate {
  100% {
    text-shadow: 0 0 4px #fff, 0 0 11px #fff, 0 0 19px #fff, 0 0 40px #bc13fe,
      0 0 80px #bc13fe, 0 0 90px #bc13fe, 0 0 100px #bc13fe, 0 0 150px #bc13fe;
  }

  0% {
    text-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff, 0 0 10px #bc13fe,
      0 0 45px #bc13fe, 0 0 55px #bc13fe, 0 0 70px #bc13fe, 0 0 80px #bc13fe;
  }
}

@keyframes box-pulsate {
  100% {
    box-shadow: 0 0 4px #fff, 0 0 11px #fff, 0 0 19px #fff, 0 0 40px #bc13fe,
      0 0 80px #bc13fe, 0 0 90px #bc13fe, 0 0 100px #bc13fe, 0 0 150px #bc13fe;
  }

  0% {
    box-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff, 0 0 10px #bc13fe,
      0 0 45px #bc13fe, 0 0 55px #bc13fe, 0 0 70px #bc13fe, 0 0 80px #bc13fe;
  }
}

